[package]
name = "advent-of-code"
version = "0.1.0"
authors = ["nathan moreau <nathan.moreau@m4x.org>"]

[[bin]]
name = "day1"
path = "src/day1-inverse-captcha.rs"

[[bin]]
name = "day2"
path = "src/day2-corruption-checksum.rs"

[[bin]]
name = "day3"
path = "src/day3-spiral-memory.rs"

[dependencies]
