[package]
name = "advent-of-code"
version = "0.1.0"
authors = ["nathan moreau <nathan.moreau@m4x.org>"]

[[bin]]
name = "day1"
path = "src/day1-inverse-captcha.rs"

[[bin]]
name = "day2"
path = "src/day2-corruption-checksum.rs"

[[bin]]
name = "day3"
path = "src/day3-spiral-memory.rs"

[[bin]]
name = "day4"
path = "src/day4-high-entropy-passphrases.rs"

[[bin]]
name = "day5"
path = "src/day5-twisty-trampolines.rs"

[[bin]]
name = "day6"
path = "src/day6-memory-reallocation.rs"

[[bin]]
name = "day7"
path = "src/day7-recursive-circus.rs"

[[bin]]
name = "day8"
path = "src/day8-registers.rs"

[[bin]]
name = "day9"
path = "src/day9-stream-processing.rs"

[dependencies]
