[package]
name = "advent-of-code"
version = "0.1.0"
authors = ["nathan moreau <nathan.moreau@m4x.org>"]

[[bin]]
name = "day1"
path = "src/day1-inverse-captcha.rs"

[[bin]]
name = "day2"
path = "src/day2-corruption-checksum.rs"

[[bin]]
name = "day3"
path = "src/day3-spiral-memory.rs"

[[bin]]
name = "day4"
path = "src/day4-high-entropy-passphrases.rs"

[[bin]]
name = "day5"
path = "src/day5-twisty-trampolines.rs"

[[bin]]
name = "day6"
path = "src/day6-memory-reallocation.rs"

[[bin]]
name = "day7"
path = "src/day7-recursive-circus.rs"

[[bin]]
name = "day8"
path = "src/day8-registers.rs"

[[bin]]
name = "day9"
path = "src/day9-stream-processing.rs"

[[bin]]
name = "day10"
path = "src/day10-knot-hash.rs"

[[bin]]
name = "day11"
path = "src/day11-hex-grid.rs"

[[bin]]
name = "day12"
path = "src/day12-digital-plumber.rs"

[[bin]]
name = "day13"
path = "src/day13-packet-scanners.rs"

[[bin]]
name = "day14"
path = "src/day14-disk-defragmentation.rs"

[[bin]]
name = "day15"
path = "src/day15-dueling-generators.rs"

[[bin]]
name = "day16"
path = "src/day16-permutation-promenade.rs"

[[bin]]
name = "day17"
path = "src/day17-spinlock.rs"

[[bin]]
name = "day18"
path = "src/day18-duet.rs"

[[bin]]
name = "day19"
path = "src/day19-tubes.rs"

[[bin]]
name = "day20"
path = "src/day20-particles.rs"

[[bin]]
name = "day21"
path = "src/day21-fractal.rs"

[[bin]]
name = "day22"
path = "src/day22-virus.rs"

[dependencies]
